# stock-advisor-streamlit

./: .gitignore  Dockerfile  README.md  app.py  crew.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml
tools/: alpha_vantage_tools.py  financial_data_tool.py  search_tools.py  yfinance_tool.py
